// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component should render with title and circular props 1`] = `
<ForwardRef
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#e0e1e2",
      "borderColor": null,
      "borderRadius": 50,
      "borderWidth": 0,
      "flex": null,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 11,
      "paddingVertical": 11,
    }
  }
>
  <Text
    style={
      Object {
        "color": "rgba(0,0,0,.6)",
        "fontWeight": "bold",
      }
    }
  >
    Save
  </Text>
</ForwardRef>
`;

exports[`Button Component should render with title prop 1`] = `
<ForwardRef
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#e0e1e2",
      "borderColor": null,
      "borderRadius": 3,
      "borderWidth": 0,
      "flex": null,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 11,
      "paddingVertical": 11,
    }
  }
>
  <Text
    style={
      Object {
        "color": "rgba(0,0,0,.6)",
        "fontWeight": "bold",
      }
    }
  >
    Save
  </Text>
</ForwardRef>
`;

exports[`Button Component should render with title, circular and disabled props 1`] = `
<ForwardRef
  disabled={true}
  onPress={null}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#e0e1e2",
      "borderColor": null,
      "borderRadius": 50,
      "borderWidth": 0,
      "flex": null,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 0.45,
      "paddingHorizontal": 11,
      "paddingVertical": 11,
    }
  }
>
  <Text
    style={
      Object {
        "color": "rgba(0,0,0,.6)",
        "fontWeight": "bold",
      }
    }
  >
    Save
  </Text>
</ForwardRef>
`;

exports[`Button Component should render with title, circular, disabled and fluid props 1`] = `
<ForwardRef
  disabled={true}
  onPress={null}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#e0e1e2",
      "borderColor": null,
      "borderRadius": 50,
      "borderWidth": 0,
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 0.45,
      "paddingHorizontal": 11,
      "paddingVertical": 11,
    }
  }
>
  <Text
    style={
      Object {
        "color": "rgba(0,0,0,.6)",
        "fontWeight": "bold",
      }
    }
  >
    Save
  </Text>
</ForwardRef>
`;

exports[`Button Component should render with title, circular, disabled, fluid and outline props 1`] = `
<ForwardRef
  disabled={true}
  onPress={null}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "borderColor": "#e0e1e2",
      "borderRadius": 50,
      "borderWidth": 1,
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 0.45,
      "paddingHorizontal": 11,
      "paddingVertical": 11,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#e0e1e2",
        "fontWeight": "bold",
      }
    }
  >
    Save
  </Text>
</ForwardRef>
`;

exports[`Button Component should render with title, circular, disabled, fluid, outline and style props 1`] = `
<ForwardRef
  disabled={true}
  onPress={null}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "borderColor": "#e0e1e2",
      "borderRadius": 50,
      "borderWidth": 1,
      "flex": 1,
      "flexDirection": "row",
      "height": 50,
      "justifyContent": "center",
      "opacity": 0.45,
      "paddingHorizontal": 11,
      "paddingVertical": 11,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#e0e1e2",
        "fontWeight": "bold",
      }
    }
  >
    Save
  </Text>
</ForwardRef>
`;

exports[`Button Component should render with title, circular, disabled, fluid, outline style props 1`] = `
<ForwardRef
  disabled={true}
  onPress={null}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "borderColor": "#e0e1e2",
      "borderRadius": 50,
      "borderWidth": 1,
      "flex": 1,
      "flexDirection": "row",
      "height": 50,
      "justifyContent": "center",
      "opacity": 0.45,
      "paddingHorizontal": 11,
      "paddingVertical": 11,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#e0e1e2",
        "fontWeight": "bold",
      }
    }
  >
    Save
  </Text>
</ForwardRef>
`;

exports[`Button Component should render with title, circular, disabled, fluid, outline, style and color props 1`] = `
<ForwardRef
  disabled={true}
  onPress={null}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "borderColor": "#db2828",
      "borderRadius": 50,
      "borderWidth": 1,
      "flex": 1,
      "flexDirection": "row",
      "height": 50,
      "justifyContent": "center",
      "opacity": 0.45,
      "paddingHorizontal": 11,
      "paddingVertical": 11,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#db2828",
        "fontWeight": "bold",
      }
    }
  >
    Save
  </Text>
</ForwardRef>
`;

exports[`Button Component should render with title, circular, disabled, fluid, outline, style and color props 2`] = `
<ForwardRef
  disabled={true}
  onPress={null}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "borderColor": "#db2828",
      "borderRadius": 50,
      "borderWidth": 1,
      "flex": 1,
      "flexDirection": "row",
      "height": 50,
      "justifyContent": "center",
      "opacity": 0.45,
      "paddingHorizontal": 11,
      "paddingVertical": 11,
      "shadowColor": "#191919",
      "shadowOffset": Object {
        "height": 2,
        "width": 1,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 0.1,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#db2828",
        "fontWeight": "bold",
      }
    }
  >
    Save
  </Text>
</ForwardRef>
`;

exports[`Button Component should render with title, circular, disabled, fluid, outline, style, color and iconName props 1`] = `
<ForwardRef
  disabled={true}
  onPress={null}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "borderColor": "#db2828",
      "borderRadius": 50,
      "borderWidth": 1,
      "flex": 1,
      "flexDirection": "row",
      "height": 50,
      "justifyContent": "center",
      "opacity": 0.45,
      "paddingHorizontal": 11,
      "paddingVertical": 11,
      "shadowColor": "#191919",
      "shadowOffset": Object {
        "height": 2,
        "width": 1,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 0.1,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#db2828",
        "fontWeight": "bold",
      }
    }
  >
    Save
  </Text>
</ForwardRef>
`;

exports[`Button Component should render with title, iconName and iconType props 1`] = `
<ForwardRef
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#e0e1e2",
      "borderColor": null,
      "borderRadius": 3,
      "borderWidth": 0,
      "flex": null,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 11,
      "paddingVertical": 11,
    }
  }
>
  <Icon
    color="rgba(0,0,0,.6)"
    name="user"
    style={
      Object {
        "fontSize": 15,
        "marginRight": 5,
      }
    }
    type="Ionicons"
  />
  <Text
    style={
      Object {
        "color": "rgba(0,0,0,.6)",
        "fontWeight": "bold",
      }
    }
  >
    Add Friend
  </Text>
</ForwardRef>
`;

exports[`Button Component should render without issues 1`] = `
<ForwardRef
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#e0e1e2",
      "borderColor": null,
      "borderRadius": 3,
      "borderWidth": 0,
      "flex": null,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 11,
      "paddingVertical": 11,
    }
  }
/>
`;
